Role design and documentation improvements.
Fixed documentation, playbook and tests that were copy pasted from other
role during initial implementation. Improved role implementation to
match other already implemented roles.

--- a/templates/envdump.rst.j2
+++ b/templates/envdump.rst.j2
@@ -1,4 +1,4 @@
-.. _section-dump:
+.. _section-envdump:
 
 Full environment dump
 ================================================================================
