--- a/templates/inventory_detail.rst.j2
+++ b/templates/inventory_detail.rst.j2
@@ -1,34 +1,42 @@
 .. _section-inventory-detail-{{ inventory_hostname }}:
 
 Server **{{ ansible_hostname }}**
-================================================================================
+===========================================================================================
 
 {% if hm_util_inspector__url_remote_console is defined %}
-* **Remote console**: `link <{{ hm_util_inspector__url_remote_console }}>`__
+* **Remote console**: `console <{{ hm_util_inspector__url_remote_console }}>`__
 {% endif %}
 {% if hm_util_inspector__url_monitoring is defined  %}
-* **Monitoring page**: `link <{{ hm_util_inspector__url_monitoring }}>`__
+* **Monitoring page**: `status <{{ hm_util_inspector__url_monitoring }}>`__
 {% endif %}
 {% if hm_util_inspector__url_documentation is defined  %}
-* **Documentation page**: `link <{{ hm_util_inspector__url_documentation }}>`__
+* **Documentation page**: `documentation <{{ hm_util_inspector__url_documentation }}>`__
 {% endif %}
+{% if hmui__inc_description.matched %}
 
+.. _section-inventory-detail-{{ inventory_hostname }}-description:
+
+Description
+-------------------------------------------------------------------------------------------
+
+.. include:: /host_files/{{ inventory_hostname }}/docs/_inc_description.rst
+
+{% endif %}
 
 .. _section-inventory-detail-{{ inventory_hostname }}-overview:
 
 Overview
---------------------------------------------------------------------------------
+-------------------------------------------------------------------------------------------
 
-================  ====================================
+================  ===================================================================================
 **Hostname**      {{ ansible_fqdn }}
-**Distro**        {{ ansible_lsb.id }}
-**Release**       {{ ansible_lsb.release }}
-**Codename**      {{ ansible_lsb.codename }}
-**Arch**          {{ ansible_userspace_architecture }}
+**Distribution**  {{ ansible_lsb.id }} {{ ansible_lsb.release }} {{ ansible_lsb.codename }}
+**Architecture**  {{ ansible_userspace_architecture }}
 **Kernel**        {{ ansible_kernel }}
-**Server**        {{ ansible_product_name }}
-**Serial**        {{ ansible_product_serial }}
+**Type**          {{ ansible_product_name }}
+**Serial**        {% if hm_util_inspector__url_support is defined %}`{{ ansible_product_serial }} <hm_util_inspector__url_support>`__{% else %}{{ ansible_product_serial }}{% endif %}
 **RAM**           {{ ansible_memtotal_mb }}
+**vCPUs**         {{ ansible_processor_vcpus }} x {{ ansible_processor[2] }} ({{ ansible_processor_count }} x {{ ansible_processor_cores }} cores x {{ ansible_processor_threads_per_core }} threads)
 **Default IPv4**  {{ ansible_default_ipv4.address }}
 **Default IPv6**  {{ ansible_default_ipv6.address }}
 {% if hm_util_inspector__asset_tag is defined %}
@@ -39,7 +47,7 @@ Overview
 **Rackspace**     {% if hm_util_inspector__url_rackspace is defined %}`{{ hm_util_inspector__rackspace_allocation }} <{{hm_util_inspector__url_rackspace}}>`__{% else %}{{ hm_util_inspector__rackspace_allocation }}{% endif %}
 {% endif %}
 
-================  ====================================
+================  ===================================================================================
 
 * **Group memberships**: 
 
@@ -50,13 +58,14 @@ Overview
 * **System administrators**: 
 
 {% for aname in hm_accounts__admins %}
-  * {{ aname }}
+  * {{ aname }}{% if aname == primary_admin %} **(PRIMARY ADMIN)**{% endif %}
+
 {% endfor %}
 
 
 .. _section-inventory-detail-{{ inventory_hostname }}-dump:
 
 Environment dump
---------------------------------------------------------------------------------
+-------------------------------------------------------------------------------------------
 
 :ref:`Environment dump <section-inventory-dump-{{ inventory_hostname }}>`
