Added link from inventory detail page to user account detail page.

--- a/templates/inventory_detail.rst.j2
+++ b/templates/inventory_detail.rst.j2
@@ -58,7 +58,7 @@ Overview
 * **System administrators**: 
 
 {% for aname in hm_accounts__admins %}
-  * {{ aname }}{% if aname == primary_admin %} **(PRIMARY ADMIN)**{% endif %}
+  * :ref:`{{ aname }} <section-users-detail-{{ aname }}>`{% if aname == primary_admin %} **(PRIMARY ADMIN)**{% endif %}
 
 {% endfor %}
 
