Redesign: Changed paths for searching customized templates to work with new MSMS.
Latest version of MSMS redesigned directory layout to be more clear and
to better follow Ansible best practices.

--- a/templates/inventory.rst.j2
+++ b/templates/inventory.rst.j2
@@ -123,7 +123,7 @@ Server details
    :maxdepth: 1
    :glob:
 
-   /vault/docs/inventory/detail_*
+   /inventory/docs/inventory/detail_*
 
 
 .. _section-inventory-dump:
@@ -135,7 +135,7 @@ Server fact dumps
    :maxdepth: 1
    :glob:
 
-   /vault/docs/inventory/dump_*
+   /inventory/docs/inventory/dump_*
 
 
 Full environment dump
@@ -144,4 +144,4 @@ Full environment dump
 .. toctree::
    :maxdepth: 1
 
-   /vault/docs/envdump
+   /inventory/docs/envdump
