--- a/templates/envdump_detail.rst.j2
+++ b/templates/envdump_detail.rst.j2
@@ -1,6 +1,6 @@
-.. _section-inventory-dump-{{ inventory_hostname }}:
+.. _section-envdump-detail-{{ inventory_hostname }}:
 
-Environment dump for server **{{ ansible_hostname }}**
+Environment dump for host **{{ ansible_hostname }}**
 ================================================================================
 
 .. code-block:: json
