Fix: Corrected Sphinx-doc warnings, minor section title immprovements.

--- a/templates/inventory.rst.j2
+++ b/templates/inventory.rst.j2
@@ -114,9 +114,9 @@ Performance comparison
 {% endfor %}
 
 
-.. _section-inventory-detail:
+.. _section-inventory-list:
 
-Server details
+Server list
 --------------------------------------------------------------------------------
 
 .. toctree::
