Fixed documentation section reference name.

--- a/templates/users.rst.j2
+++ b/templates/users.rst.j2
@@ -1,4 +1,4 @@
-.. _section-users:
+.. _section-inventory-users:
 
 Users
 ================================================================================
